gcc/testsuite/rust/rustc/ui/typeck/issue-87771-ice-assign-assign-to-bool.rs
fn main() {
    let mut a;
    a = a = true; // { dg-error ".E0308." "" { target *-*-* } }
}

